# CourseSieve

./: .gitignore  LICENSE  README.EXE.md  README.md  pyproject.toml
coursesieve/: __init__.py  cli.py  config.py
coursesieve/asr/: faster_whisper_backend.py
coursesieve/llm/: client.py  prompts.py  schema.py
coursesieve/media/: ffmpeg.py  timecode.py
coursesieve/ocr/: cleanup.py  tesseract.py
coursesieve/pipeline/: __init__.py  run.py
coursesieve/pipeline/steps/: asr.py  export.py  fetch.py  frames.py  fuse.py  ocr.py  prep.py  reduce.py  summarize.py
coursesieve/sources/: bilibili.py  local.py
coursesieve/store/: cache.py  manifest.py
coursesieve/utils/: deps.py  hashing.py  io.py  logging.py
scripts/: build_windows.bat  build_windows.ps1
tests/: test_hashing.py  test_timecode.py
